# fledge-south-opcua

./: .gitignore  CMakeLists.txt  Description  FindFogLAMP.cmake  Jenkinsfile  LICENSE  Package  README.rst  build.sh  build_deb.sh  build_rhel.sh  build_rhel_centos_7.sh  fledge.version  foglamp.version  make_deb  opcua.cpp  plugin.cpp  requirements.sh
docs/: index.rst  keywords
include/: opcua.h
tests/: CMakeLists.txt  test_info.cpp
